--- a/LearningCUCUMBER_BDD/test-output/old/Default suite/methods.html
+++ b/LearningCUCUMBER_BDD/test-output/old/Default suite/methods.html
@@ -1,10 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9580bf">  <td>24/07/04 13:27:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.CucumberRunner@3fc2959f]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="9580bf">  <td>24/07/04 13:27:40</td>   <td>-11617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@3fc2959f]">runScenario</td> 
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="9580bf">  <td>24/07/04 13:27:40</td>   <td>-11778</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runner.CucumberRunner@3fc2959f]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>994</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runner.CucumberRunner@5e0e82ae]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>24/07/10 22:14:21</td>   <td>989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper,io.cucumber.testng.FeatureWrapper)[pri:0, instance:runner.CucumberRunner@5e0e82ae]">runScenario</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
 </table>
